Change logo and main color for aten

--- a/mean/public/assets/less/_variables_mixins.less
+++ b/mean/public/assets/less/_variables_mixins.less
@@ -14,16 +14,16 @@
 @white:                         #fff;
 
 @danger_color:                  @md-color-red-600;
-@primary_color:                 @md-color-blue-500;
-@primary_color_dark:            @md-color-blue-700;
+@primary_color:                 @aten-main-color;
+@primary_color_dark:            @aten-main-color;
 @success_color:                 @md-color-light-green-600;
 @warning_color:                 @md-color-amber-700;
 @muted_color:                   @md-color-grey-400;
 
 // theme
-@theme_primary_color:           @md-color-blue-500;
+@theme_primary_color:           @aten-main-color;;
 @theme_light_color:             @md-color-blue-50;
-@theme_dark_color:              @md-color-blue-700;
+@theme_dark_color:              @aten-main-color;
 @accent_color:                  @md-color-light-green-600;
 
 /* md buttons */
