--- a/mean/public/assets/less/partials/_sidebars.less
+++ b/mean/public/assets/less/partials/_sidebars.less
@@ -169,8 +169,7 @@
             height: @header_main_height + @top_bar_height + 1;
             border-bottom: 1px solid @border_color;
             margin-bottom: 20px;
-            .retina_image('../img/sidebar_head_bg.png','../img/sidebar_head_bg@2x.png',310px,310px);
-            background-position: -20px -124px;
+            background-color: #fff;
             .sidebar_logo {
                 height: @header_main_height;
                 line-height: @header_main_height;
@@ -185,6 +184,7 @@
             }
             .sidebar_actions {
                 margin: 0 20px;
+                text-align: center;
                 .clearfix;
                 .selectize-control {
                     float: left;
