--- a/mean/src/client/core/views/home.client.view.html
+++ b/mean/src/client/core/views/home.client.view.html
@@ -14,7 +14,7 @@
 					class="material-icons">&#xE5D2;</i>
 				</a>
 				<div class="uk-navbar-brand " style="    padding-left: 0px;">
-					<a ui-sref="home"> <img src="/assets/img/brand/nissan-logo1.png" alt=""
+					<a ui-sref="home"> <img src="/assets/img/brand/aten-logo1.png" alt=""
 						width="105" height="24">
 					</a>
 				</div>
@@ -46,7 +46,7 @@
 						<li><a href="#sect-course">
 								{{'PAGE.HOME.COURSES'|translate}} </a></li>
 						<li><a href="#sect-program">
-								{{'PAGE.HOME.PROGRAMS'|translate}} </a></li>		
+								{{'PAGE.HOME.PROGRAMS'|translate}} </a></li>
 					</ul>
 				</div>
 			</div>
@@ -120,7 +120,7 @@
 	<div class="uk-block courses-container-data courses-container"	id="sect-course" ng-show='vm.courses.length'>
 		<div class="container-home uk-container uk-container-center">
 			<div class="uk-grid">
-			<h3 class="uk-width-small-1-2 heading_b uk-text-center md-color-blue-500">{{'PAGE.HOME.AVAILABLE_COURSE_LIST'|translate}}</h3>
+			<h3 class="uk-width-small-1-2 heading_b uk-text-center aten-main-color">{{'PAGE.HOME.AVAILABLE_COURSE_LIST'|translate}}</h3>
 			<div class="uk-width-small-1-2 content-search uk-grid" style="margin-top: 0px;">
 				<div class="main-search-box uk-width-large-10-12 uk-container-center uk-text-center">
 					<input type="text"
@@ -148,8 +148,8 @@
 			</show-more-pagination>
 		</div>
 	</div>
-	
-	
+
+
 	<div class="uk-block" id="sect-program" ng-show='vm.programs.length'>
 		<div class="container-home uk-container uk-container-center">
 			<h3 class="heading_b uk-text-center md-color-blue-500">{{'PAGE.HOME.AVAILABLE_PROGRAM_LIST'|translate}}</h3>
@@ -161,8 +161,8 @@
 			</div>
 		</div>
 	</div>
-	
-	
+
+
 </div>
 <footer id="footer">
 	<small> &copy; 2014-2015 <a href="#">Thanh Cong A Chau ,
