--- a/mean/src/client/core/views/home.client.view.html
+++ b/mean/src/client/core/views/home.client.view.html
@@ -14,8 +14,10 @@
 					class="material-icons">&#xE5D2;</i>
 				</a>
 				<div class="uk-navbar-brand " style="    padding-left: 0px;">
-					<a ui-sref="home"> <img src="/assets/img/brand/aten-logo1.png" alt=""
-						width="105" height="24">
+					<a ui-sref="home">
+            <img src="/assets/img/brand/aten-logo1.png" alt=""
+                 style="margin-top: -8px;"
+                 width="72px" >
 					</a>
 				</div>
 
