--- a/mean/src/client/conference/views/conference.client.view.html
+++ b/mean/src/client/conference/views/conference.client.view.html
@@ -1,5 +1,5 @@
 <style type="text/css">
-@import url("/assets/css/conference.css");
+@import url("/assets/css/conference.css?v=2");
 
 @import url("/assets/css/animate.css");
 </style>
@@ -74,7 +74,40 @@
 		</div>
 	</div>
 
-	
+  <div class="panel-functional"
+       ng-class="vm.selectPanel=='chat' ? 'panel-show' : 'panel-hide'">
+    <div class="chat-wrapper">
+      <div id="chat-content" class="chat-content" style="overflow-y: auto;">
+        <ul class="messages-list list-unstyled">
+          <li class="md-1-line message-item" ng-repeat="msg in vm.chatMessage">
+            <div class="message_box" id="{{msg.idx}}">
+              <span class="user">{{msg.user}}: </span> <span class="message">{{msg.text}}</span>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+      <div layout="row" class="input-message-group"
+           ng-keypress="vm.sendChatMessage($event)">
+        <div class="uk-grid">
+          <div class="uk-width-1-1">
+            <label>{{"PAGE.CONFERENCE.CHAT_MESSAGE" | translate}}</label>
+            <a class="md-button md-button-mini md-button-primary"
+               aria-label="Send message" ng-click="vm.chat()" style="float: right; margin-right: 10px;"> <i
+              class="uk-icon-paper-plane" aria-hidden="true"></i>
+            </a>
+            <input type="text" ng-model="vm.chatInput">
+          </div>
+          <!-- <div class="uk-width-1-5">
+            <a class="md-button md-button-mini md-button-primary"
+              aria-label="Send message" ng-click="chat()"> <i
+              class="uk-icon-paper-plane" aria-hidden="true"></i>
+            </a>
+          </div> -->
+        </div>
+      </div>
+    </div>
+  </div>
 
 	<div class="panel-functional"
 		ng-class="vm.selectPanel=='settings' ? 'panel-show' : 'panel-hide'">
@@ -195,7 +228,7 @@
 			</div>
 
 		</div>
-		 
+
 		<div ng-show="vm.connected" ng-class="!vm.slideshow && vm.member.role =='teacher' ? 'videolocal-teacher' : 'video_teacher_wrapper'">
 			<div ng-class="!vm.slideshow && vm.member.role =='teacher' ? 'local-video-teacher' : 'video_wrapper'">
 
@@ -204,7 +237,7 @@
 					translate}}</div>
 			</div>
 		</div>
-		
+
 		<span class="btn-toggle vi-center" ng-show="vm.studentChannels.length"
 			ng-style="vm.showListVideos ? {} : {'right': 0}"
 			ng-click="vm.showListVideos = !vm.showListVideos;"> <i
