--- a/mean/public/assets/css/conference.css
+++ b/mean/public/assets/css/conference.css
@@ -910,9 +910,9 @@ a[ng-click] {
     height: 100%;
     overflow: hidden;
     position: absolute;
-    right: 0px;
-    transition: all 0.6s ease;
-    width: 100%;
+	right: 40px;
+	transition: all 0.6s ease;
+	width: calc(100% - 90px);
 }
 
 .conference .large-video {
@@ -1091,7 +1091,7 @@ a[ng-click] {
     bottom: 10px;
     position: absolute;
     right: 10px;
-    top: 0px;
+    top: 68px;
     width: 200px;
     z-index: 110;
 }
