update email sent to user

--- a/mean/src/server/users/templates/user-registeration-welcome-email.server.view.html
+++ b/mean/src/server/users/templates/user-registeration-welcome-email.server.view.html
@@ -8,8 +8,10 @@
 <body>
 	<p>Dear {{name}},</p>
 	<p></p>
-	<p>Welcome to e-Training, the Corporate Learning Management System
+	<p>Welcome to e-Training of {{customer}}, the Corporate Learning Management System
 		Solutions</p>
+	<p>Username: {{username}}</p>
+	<p>Password: {{password}}</p>
 	<br />
 	<br />
 	<p>The {{appName}} Support Team</p>
