change to vietnam

--- a/mean/src/server/users/templates/user-registeration-welcome-email.server.view.html
+++ b/mean/src/server/users/templates/user-registeration-welcome-email.server.view.html
@@ -8,10 +8,9 @@
 <body>
 	<p>Dear {{name}},</p>
 	<p></p>
-	<p>Welcome to e-Training of {{customer}}, the Corporate Learning Management System
-		Solutions</p>
-	<p>Username: {{username}}</p>
-	<p>Password: {{password}}</p>
+	<p>Chúc mừng bạn đến với hệ thống đào tạo online của {{customer}}</p>
+	<p>Tên đăng nhập: {{username}}</p>
+	<p>Mật khẩu: {{password}}</p>
 	<br />
 	<br />
 	<p>The {{appName}} Support Team</p>
