--- a/mean/src/client/cms/views/list-self.course.members.client.view.html
+++ b/mean/src/client/cms/views/list-self.course.members.client.view.html
@@ -56,7 +56,8 @@
 	<h3 class="heading_a uk-margin-bottom">{{'PAGE.CMS.COURSES.ENROLL.STUDENT'
 		| translate}}</h3>
 	<div class="md-card uk-margin-medium-bottom">
-		<div class="md-card-content">
+		<div class="md-card-content" ng-repeat="group in vm.listStudentByGroup">
+			<span style="font-weight: bold;">{{group.group.name}}</span>
 			<div class="uk-overflow-container">
 				<table class="uk-table uk-table-nowrap  uk-table-condensed">
 					<thead>
@@ -72,7 +73,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="member in vm.students">
+						<tr ng-repeat="member in group.students">
 							<td class="uk-text-center"><img class="md-user-image"
 								src="{{member.member.profileImageURL}}" alt="" /></td>
 							<td>{{member.member.username}}</td>
