--- a/mean/src/client/lms/views/course-board/course-unit/test/study-quiz-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/test/study-quiz-course.client.view.html
@@ -22,39 +22,39 @@
 
 		<div class="md-card-content">
 			<div ng-if="vm.question.type=='mc'">
-				<multiple-choice-question mode="'study'" question="vm.question"
+				<multiple-choice-question shuffle="true" mode="'study'" question="vm.question"
 					answer="vm.question.answer"></multiple-choice-question>
 			</div>
 			<div ng-if="vm.question.type=='sc'">
-				<single-choice-question mode="'study'" question="vm.question"
+				<single-choice-question shuffle="true" mode="'study'" question="vm.question"
 					answer="vm.question.answer"></single-choice-question>
 			</div>
 			<div ng-if="vm.question.type=='tf'">
-				<true-false-question mode="'study'" question="vm.question"
+				<true-false-question shuffle="true" mode="'study'" question="vm.question"
 					answer="vm.question.answer"></true-false-question>
 			</div>
 			<div ng-if="vm.question.type=='fb'">
-				<fill-blank-question mode="'study'" question="vm.question"
+				<fill-blank-question shuffle="true" mode="'study'" question="vm.question"
 					answer="vm.question.answer"></fill-blank-question>
 			</div>
 			<div ng-if="vm.question.type=='ext'">
-				<extend-text-question mode="'study'" answer="vm.question.answer"
+				<extend-text-question shuffle="true" mode="'study'" answer="vm.question.answer"
 					question="vm.question"></extend-text-question>
 			</div>
 			<div ng-if="vm.question.type=='as'">
-				<associative-question mode="'study'" answer="vm.question.answer"
+				<associative-question shuffle="true" mode="'study'" answer="vm.question.answer"
 					question="vm.question"></associative-question>
 			</div>
 			<div ng-if="vm.question.type=='dnd'">
-				<drag-drop-question mode="'study'" answer="vm.question.answer"
+				<drag-drop-question shuffle="true" mode="'study'" answer="vm.question.answer"
 					question="vm.question"></drag-drop-question>
 			</div>
 			<div ng-if="vm.question.type=='pic'">
-				<point-click-question mode="'study'" answer="vm.question.answer"
+				<point-click-question shuffle="true" mode="'study'" answer="vm.question.answer"
 					question="vm.question"></point-click-question>
 			</div>
 			<div ng-if="vm.question.grouped">
-				<group-question mode="'study'" question="vm.question"
+				<group-question shuffle="true" mode="'study'" question="vm.question"
 					answer="vm.question.answer" sub-index="vm.subIndex"></group-question>
 			</div>
 
