--- a/mean/src/client/dashboard/views/dashboard.client.view.html
+++ b/mean/src/client/dashboard/views/dashboard.client.view.html
@@ -87,7 +87,7 @@
 					</div>
 
 					<div class="md-card-content">
-						<ul id="user_tabs" class="uk-switcher uk-margin chart-container">
+						<ul id="user_tabs" class="uk-switcher chart-container">
 							<li><user-register-chart day="vm.userStatsDay"></user-register-chart>
 							</li>
 							<li><user-login-chart day="vm.userStatsDay"></user-login-chart>
