--- a/mean/src/client/lms/views/exam-board/instructor/score.board-exam.client.view.html
+++ b/mean/src/client/lms/views/exam-board/instructor/score.board-exam.client.view.html
@@ -22,7 +22,7 @@
 					<!--<i class="uk-icon-file-excel-o" aria-hidden="true"></i>-->
 					<!--{{"ACTION.EXPORT" | translate}}-->
 				<!--</button>-->
-				<export-excel tableid="tableToExportScoreBoard" style="margin-left: 10px;"></export-excel>
+				<export-excel tableid="tableToExportScoreBoard" style="float: right;margin-top: 7px;"></export-excel>
 			</div>
 			<div class="content-table-gradebook md-card-content">
 				<div class="uk-overflow-container">
