--- a/mean/public/assets/less/_uikit_custom.less
+++ b/mean/public/assets/less/_uikit_custom.less
@@ -1608,3 +1608,149 @@ a.uk-datepicker-table-muted {
         opacity: 1 !important
     }
 }
+
+#page_content_inner [ng-click] {
+    cursor: pointer !important;
+}
+
+#page_heading h1 {
+    font-size: 16px !important;
+}
+
+#page_heading {
+    padding: 12px !important;
+    height: 66px !important;
+    min-height: 66px !important;
+}
+
+#page_heading .heading_actions {
+    margin-top: 14px !important;
+}
+
+.no-box-shadow {
+    box-shadow: none !important;
+}
+
+.md-card-toolbar .md-icon,
+.md-card-toolbar .uk-icon-small {
+    font-size: 18px !important;
+}
+
+#sidebar_main .menu_section a:hover {
+    background-color: #ececec;
+}
+
+.course-title-user {
+    font-size: 20px!important;
+}
+
+#page_heading a {
+    font-size: 14px;
+}
+
+#page_heading h1 input[type="text"] {
+    padding: 0;
+    margin: -6px 0 5px 42px;
+}
+
+#divSwf {
+    width: 100%!important;
+    height: 100%!important;
+}
+
+.img_thumb {
+    width: 146px!important;
+}
+
+.blog_article .uk-thumbnail.thumbnail_left {
+    max-height: 84px!important;
+    overflow: hidden!important;
+}
+
+.my-course-content .uk-article-title {
+    font-size: 20px!important;
+}
+
+#course_attempt_chart, #login_chart, #member_complete_chart, #member_instudy_chart, #member_register_chart, #register_chart {
+    min-height: 0!important;
+}
+
+.search-course-content .link-course-search {
+    position: relative!important;
+    padding: 12px 0 12px 0!important;
+    border-bottom: 1px solid #f0f0f0;
+    float: left;
+    width: 100%;
+}
+
+.search-categories-list li:hover {
+    background-color: rgb(222, 222, 222);
+}
+
+#medias-list .uk-width-1-1 {
+    height: 116px!important;
+    border-bottom: 1px solid #f0f0f0;
+}
+
+#medias-list .uk-width-1-1 .uk-width-1-4 {
+    padding-left: 0 !important;
+}
+
+#medias-list .media-title {
+    color: #2196f3!important;
+}
+
+.sort-select {
+    border: none!important;
+    margin-right:0!important;
+}
+
+#sidebar_main .sidebar_main_header .sidebar_logo,
+#sidebar_main .sidebar_main_header .sidebar_actions {
+    margin: 0!important;
+    text-align: center;
+}
+
+#courses-list-search {
+    padding-top:0!important;
+}
+
+#courses-list-search .uk-width-1-1 {
+    margin-bottom: 0!important;
+    height:auto!important;
+    margin-top: 0!important;
+}
+
+#sidebar_main .sidebar_main_header .sidebar_logo a {
+    margin-left: 0!important;
+}
+
+group-tree-view .fancytree-container {
+    overflow-y: scroll;
+    max-height: 400px;
+}
+
+#packageUrl * {
+    max-width:100%!important;
+    max-height:100%!important;
+}
+
+#list-edit-courses .md-card-toolbar .md-icon,
+#list-edit-courses .md-card-toolbar .uk-icon-small {
+    font-size: 17px!important;
+    height: 20px!important;
+    width: 20px!important;
+    line-height: 20px!important;
+}
+
+#list-edit-courses .md-card-toolbar-actions {
+    padding-top: 12px;
+}
+
+#sect-course .heading_c {
+    line-height: 42px;
+}
+
+.course-thumbnail {
+    border-bottom: 1px solid #f0f0f0!important;
+}
