--- a/mean/src/client/core/views/home.client.view.html
+++ b/mean/src/client/core/views/home.client.view.html
@@ -14,10 +14,8 @@
 					class="material-icons">&#xE5D2;</i>
 				</a>
 				<div class="uk-navbar-brand " style="    padding-left: 0px;">
-					<a ui-sref="home">
-            <img src="/assets/img/brand/aten-logo1.png" alt=""
-                 style="margin-top: -8px;"
-                 width="72px" >
+					<a ui-sref="home"> <img src="/assets/img/brand/nissan-logo1.png" alt=""
+						width="105" height="24">
 					</a>
 				</div>
 
@@ -122,19 +120,20 @@
 	<div class="uk-block courses-container-data courses-container"	id="sect-course" ng-show='vm.courses.length'>
 		<div class="container-home uk-container uk-container-center">
 			<div class="uk-grid">
-			<h3 class="uk-width-small-1-2 heading_b uk-text-center aten-main-color">{{'PAGE.HOME.AVAILABLE_COURSE_LIST'|translate}}</h3>
-			<div class="uk-width-small-1-2 content-search uk-grid" style="margin-top: 0px;">
-				<div class="main-search-box uk-width-large-10-12 uk-container-center uk-text-center">
+			<h3 class="uk-width-small-1-2 heading_c md-color-blue-500">{{'PAGE.HOME.AVAILABLE_COURSE_LIST'|translate}}</h3>
+			<div class="uk-width-small-1-2 content-search uk-grid" style="margin-top: 0;margin-left: 0;">
+				<div class="main-search-box uk-width-large-10-12 uk-container-center uk-text-right">
 					<input type="text"
 						placeholder="{{'MODEL.COURSE.SEARCH' | translate}}"
 						ng-model="vm.keyword"
 						ng-keypress="(($event.which === 13) || ($event.keyCode === 13))&& vm.gotoSearch()">
 					<a ng-click="vm.gotoSearch()"><i
+            style="margin-left: -42px;"
 						class="uk-icon-hover uk-icon-search vi-btn-search"></i></a>
 				</div>
 			</div>
 			</div>
-			<div class="content-data uk-grid uk-grid-medium">
+			<div class="content-data uk-grid">
 				<div
 					class="uk-width-small-1-1 uk-width-medium-1-3 uk-width-large-1-4 course-card-home"
 					ng-repeat="course in vm.courses">
@@ -155,7 +154,7 @@
 	<div class="uk-block" id="sect-program" ng-show='vm.programs.length'>
 		<div class="container-home uk-container uk-container-center">
 			<h3 class="heading_b uk-text-center md-color-blue-500">{{'PAGE.HOME.AVAILABLE_PROGRAM_LIST'|translate}}</h3>
-			<div class="content-data uk-grid uk-grid-medium">
+			<div class="content-data uk-grid">
 				<div class="uk-width-1-1 course-card-home"
 					ng-repeat="program in vm.programs">
 					<program-card program="program"></program-card>
