--- a/mean/src/client/lms/views/course-board/course-unit/scorm/form-scorm.section-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/scorm/form-scorm.section-course.client.view.html
@@ -42,9 +42,9 @@
 	</div>
 	<div id="page_content_inner">
 		<div class="md-card">
-			<div class="md-card-content uk-margin">
-				<iframe style="width: 100%; height: 650px" ng-src="{{vm.scorm.packageUrl}}" ng-show="vm.scorm.packageUrl"></iframe>
-				<div>
+			<div class="md-card-content uk-margin" style="padding: 16px 0;">
+				<iframe scrolling="no" style="width: 100%; height: 64vh" ng-src="{{vm.scorm.packageUrl}}" ng-show="vm.scorm.packageUrl"></iframe>
+				<div style="margin-left: 10px;">
 					<span class="uk-form-file md-btn md-btn-primary md-btn-icon">
 						<i class="uk-icon-upload"></i> {{'ACTION.UPLOAD_SCORM'|translate}}
 						<input id="file_upload-select" type="file">
