--- a/mean/src/client/lms/views/course-board/teacher/outline-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/teacher/outline-course.client.view.html
@@ -1,6 +1,6 @@
 
 <div id="page_content">
-	<div id="page_heading" data-uk-sticky="{ top: 48, media: 960 }">
+	<div id="page_heading" data-uk-sticky="{ top: 42, media: 960; padding: 12 }">
 		<div class="heading_actions ">
 
 			<div id="outline_mode_select">
