--- a/mean/src/client/workspace/views/main-sidebar.client.view.html
+++ b/mean/src/client/workspace/views/main-sidebar.client.view.html
@@ -1,8 +1,8 @@
 <!-- main sidebar -->
 <aside id="sidebar_main" sidebar-primary custom-scrollbar
        ng-class="{ 'accordion_mode': menuAccordionMode }">
-    <div class="sidebar_main_header" ng-if="!fullHeaderActive" style="height: 170px;">
-        <div class="sidebar_logo" style="margin-left: 25px; height: 80%;">
+    <div class="sidebar_main_header" ng-if="!fullHeaderActive">
+        <div class="sidebar_logo">
             <a ui-sref="workspace.dashboard"
                class="sSidebar_hide sidebar_logo_large"> <img
                     style="border: none;" class="logo_regular"
