Fix logo position

--- a/mean/src/client/core/views/home.client.view.html
+++ b/mean/src/client/core/views/home.client.view.html
@@ -15,7 +15,7 @@
 				</a>
 				<div class="uk-navbar-brand " style="    padding-left: 0px;">
 					<a ui-sref="home"> <img src="/assets/img/brand/aten-logo1.png" alt=""
-						width="105" height="24">
+						width="80" height="24" style="margin-top: -10px;">
 					</a>
 				</div>
 
