--- a/mean/src/client/lms/views/course-board/teacher/gradeboard-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/teacher/gradeboard-course.client.view.html
@@ -78,7 +78,7 @@
                 </td>
                 <td class="uk-text-center" ng-repeat="score in vm.scoreMap[member._id].scores"
                 ng-if="vm.scoreMap[member._id].scores.length">
-                  {{score.rawPercent}}
+                  {{score.rawPercent}}<span ng-show="score.timeStart" style="color: green"> ({{score.timeStart}}s)</span>
                 </td>
                 <td class="uk-text-center" ng-if="!vm.scoreMap[member._id].scores.length">
                   0
