--- a/mean/src/client/lms/views/course-board/course-unit/scorm/study-scorm-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/scorm/study-scorm-course.client.view.html
@@ -1,7 +1,7 @@
 <div class="uk-grid">
 	<div class="uk-width-medium-1-1">
 		<div class="content-html">
-      <a href="#my-id" data-uk-modal style="position: absolute;right: 40px;"
+      <a href="#my-id" data-uk-modal class="scorm-fullscreen-button"
          data-uk-tooltip="{cls:'uk-tooltip-small',pos:'bottom'}"
          title="{{'ACTION.SCORM_FULL'|translate}}"
       >
