--- a/mean/src/client/users/views/authentication/authentication.client.view.html
+++ b/mean/src/client/users/views/authentication/authentication.client.view.html
@@ -4,8 +4,10 @@
       <a ui-sref="home"
               class="uk-position-top-right uk-close uk-margin-right uk-margin-top back_to_login"></a>
 			<div class="login_heading">
-				<div class="uk-align-center">
-					<div class="user_avatar"></div>
+				<div class="uk-align-center" style="margin-top: 20px;">
+          <a ui-sref="home">
+            <img src="/assets/img/brand/logo.png" alt="" width="200" height="24">
+          </a>
 				</div>
 
 			</div>
