--- a/mean/src/client/lms/views/course-board/course-unit/html/preview-html-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/html/preview-html-course.client.view.html
@@ -1,7 +1,6 @@
 
 <div class="uk-grid" data-uk-grid-margin style="margin-left: 0;">
-	<div class="uk-width-medium-1-1"
-		style="height: 55vh; overflow: scroll;">
+	<div class="uk-width-medium-1-1">
 		<p ng-bind-html="vm.html.content"></p>
 	</div>
 </div>
