--- a/mean/src/client/lms/views/course-board/course-unit/scorm/preview-scorm-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/scorm/preview-scorm-course.client.view.html
@@ -3,7 +3,7 @@
 	<div class="uk-width-medium-1-1"
 		style="height: 64vh; overflow-y: scroll;">
 
-		<a href="#my-id" data-uk-modal style="position: absolute;right: 40px;"
+		<a href="#my-id" data-uk-modal class="scorm-fullscreen-button"
 			 data-uk-tooltip="{cls:'uk-tooltip-small',pos:'bottom'}"
 			 title="{{'ACTION.SCORM_FULL'|translate}}"
 		>
