--- a/mean/src/client/core/views/home.client.view.html
+++ b/mean/src/client/core/views/home.client.view.html
@@ -81,7 +81,7 @@
 	</div>
 </div>
 
-<div class="md-bg-grey-50"'>
+<div class="md-bg-grey-50">
 	<div class="uk-block bulletin" id="sect-bulletin"  ng-show='vm.annoucements.length'>
 		<div class="uk-container uk-container-center">
 			<div class="uk-grid ">
