--- a/mean/src/server/core/views/layout.server.view.html
+++ b/mean/src/server/core/views/layout.server.view.html
@@ -39,7 +39,7 @@
 <link href="/{{favicon}}" rel="shortcut icon" type="image/x-icon">
 
 <!--  PDF runtime -->
-<script type="text/javascript" src="/lib/pdfjs-dist/build/pdf.js"></script>
+<script type="text/javascript" src="/lib/pdfjs-dist/build/pdf.min.js"></script>
 
 <!-- Application CSS Files -->
 {{#each cssFiles}}
