--- a/mean/public/assets/less/_uikit_custom.less
+++ b/mean/public/assets/less/_uikit_custom.less
@@ -1817,4 +1817,7 @@ group-tree-view .fancytree-container {
         width: 80%;
         margin-top: 0;
     }
+    p[ng-bind-html="question.description"] {
+      margin-top: 30px;
+    }
 }
