--- a/mean/src/client/lms/views/course-board/course-unit/test/preview-quiz-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/test/preview-quiz-course.client.view.html
@@ -49,9 +49,9 @@
 		<br>
 		<hr>
 		<div class="uk-grid uk-margin-top">
-			<div class="uk-width-1-3">
+			<div style="width: 95%">
 				<a ng-show="vm.index < vm.questions.length-1 || (vm.question.grouped && vm.subIndex < vm.question.subQuestions.length)"
-					class="uk-align-left md-btn  md-btn-wave-light md-btn-icon"
+					class="uk-align-left md-btn  md-btn-wave-light md-btn-icon uk-float-right"
 					ng-click="vm.saveNext()"> <i class="uk-icon-arrow-right "></i>
 					{{'ACTION.NEXT'|translate}}
 				</a>
