--- a/mean/src/client/lms/views/course-board/course-unit/test/study-quiz-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/test/study-quiz-course.client.view.html
@@ -59,10 +59,10 @@
 			</div>
 
 			<div class="uk-grid uk-margin-top">
-				<div style="width: 95%">
+				<div class="uk-width-1-3">
 					<a
 						ng-show="vm.index < vm.questions.length-1 || (vm.question.grouped && vm.subIndex < vm.question.subQuestions.length)"
-						class="md-btn  md-btn-wave-light md-btn-icon uk-float-right"
+						class="uk-align-left md-btn  md-btn-wave-light md-btn-icon"
 						ng-click="vm.saveNext()"> <i class="uk-icon-arrow-right "></i>
 						{{'ACTION.NEXT'|translate}}
 					</a>
