--- a/mean/src/client/lms/views/exam-board/study-exam.client.view.html
+++ b/mean/src/client/lms/views/exam-board/study-exam.client.view.html
@@ -98,9 +98,9 @@ keyframes blink-animation {to { visibility:hidden;
 						<br>
 						<hr>
 						<div class="uk-grid uk-margin-top">
-							<div style="width: 95%">
+							<div class="uk-width-1-3">
 								<a ng-show="vm.index < vm.questions.length-1 || (vm.question.grouped && vm.subIndex < vm.question.subQuestions.length)"
-									class="md-btn  md-btn-wave-light md-btn-icon uk-float-right"
+									class="uk-align-left md-btn  md-btn-wave-light md-btn-icon"
 									ng-click="vm.saveNext()"> <i class="uk-icon-arrow-right "></i>
 									{{'ACTION.NEXT'|translate}}
 								</a>
