Fix button style in mobile

--- a/mean/public/assets/less/_uikit_custom.less
+++ b/mean/public/assets/less/_uikit_custom.less
@@ -1820,4 +1820,7 @@ group-tree-view .fancytree-container {
     p[ng-bind-html="question.description"] {
       margin-top: 30px;
     }
+    .md-btn {
+        white-space: nowrap!important;
+    }
 }
