Fix sidebar logo height

--- a/mean/public/assets/less/partials/_sidebars.less
+++ b/mean/public/assets/less/partials/_sidebars.less
@@ -166,12 +166,10 @@
             }
         }
         .sidebar_main_header {
-            height: @header_main_height + @top_bar_height + 1;
             border-bottom: 1px solid @border_color;
             margin-bottom: 20px;
             background-color: #fff;
             .sidebar_logo {
-                height: @header_main_height;
                 line-height: @header_main_height;
                 overflow: hidden;
                 a {
@@ -183,7 +181,7 @@
                 }
             }
             .sidebar_actions {
-                margin: 0 20px;
+                margin: 0 20px 20px;
                 text-align: center;
                 .clearfix;
                 .selectize-control {
@@ -344,7 +342,7 @@
                 display: block;
             }
             .sidebar_actions {
-                margin: 0 8px;
+                margin: 0 8px 8px;
                 .selectize-control {
                     padding-left: 13px;
                     .selectize-input {
@@ -521,7 +519,7 @@
                     display: block;
                 }
                 .sidebar_actions {
-                    margin: 0 8px;
+                    margin: 0 8px 8px;
                     .selectize-control {
                         padding-left: 12px;
                         .selectize-input {
