--- a/mean/src/client/core/views/home.client.view.html
+++ b/mean/src/client/core/views/home.client.view.html
@@ -14,7 +14,7 @@
 					class="material-icons">&#xE5D2;</i>
 				</a>
 				<div class="uk-navbar-brand " style="    padding-left: 0px;">
-					<a ui-sref="home"> <img src="/assets/img/brand/aten-logo1.png" alt=""
+					<a ui-sref="home"> <img src="/assets/img/brand/logo.png" alt=""
 						width="80" height="24" style="margin-top: -10px;">
 					</a>
 				</div>
