--- a/mean/public/assets/less/partials/_sidebars.less
+++ b/mean/public/assets/less/partials/_sidebars.less
@@ -181,7 +181,7 @@
                 }
             }
             .sidebar_actions {
-                margin: 0 20px 20px;
+                margin: 12px;
                 text-align: center;
                 .clearfix;
                 .selectize-control {
