Fix permission management

--- a/mean/public/assets/less/_uikit_custom.less
+++ b/mean/public/assets/less/_uikit_custom.less
@@ -1823,3 +1823,16 @@ group-tree-view .fancytree-container {
         white-space: nowrap!important;
     }
 }
+
+.selectize-control.no-border .selectize-input {
+    border: 0!important;
+}
+
+.selectize-control.no-border {
+    margin-top: 0!important;
+}
+
+#menuAdminTree {
+    max-height:200px;
+    overflow-y: scroll;
+}
