Fix logo position

--- a/mean/src/client/core/views/home.client.view.html
+++ b/mean/src/client/core/views/home.client.view.html
@@ -13,7 +13,7 @@
 					data-uk-offcanvas="{target:'#mobile_navigation'}"> <i
 					class="material-icons">&#xE5D2;</i>
 				</a>
-				<div class="uk-navbar-brand " style="    padding-left: 0px;">
+				<div class="uk-navbar-brand " style="padding-left: 0px;margin-top: -10px;">
 					<a ui-sref="home"> <img src="/assets/img/brand/logo.png" alt=""
 						width="80" height="24">
 					</a>
