Fix logo button height

--- a/mean/src/client/workspace/views/main-sidebar.client.view.html
+++ b/mean/src/client/workspace/views/main-sidebar.client.view.html
@@ -1,7 +1,7 @@
 <!-- main sidebar -->
 <aside id="sidebar_main" sidebar-primary custom-scrollbar
        ng-class="{ 'accordion_mode': menuAccordionMode }">
-    <div class="sidebar_main_header" ng-if="!fullHeaderActive" style="height: 112px;">
+    <div class="sidebar_main_header" ng-if="!fullHeaderActive">
         <div class="sidebar_logo" style="margin-left: 25px; height: 68%;">
             <a ui-sref="workspace.dashboard"
                class="sSidebar_hide sidebar_logo_large"> <img
