Don't required DRIVER_LICENSE

--- a/mean/src/client/users/views/edit-user.client.view.html
+++ b/mean/src/client/users/views/edit-user.client.view.html
@@ -160,11 +160,11 @@
 														<label for="course_level_select">{{'MODEL.USER.DRIVER_LICENSE'|translate}}</label>
 														<div id="course_level_select">
 															<span class="icheck-inline"> <input type="radio"
-																name="course_level" id="course_easy" required value="yes"
+																name="course_level" id="course_easy" value="yes"
 																icheck ng-model="vm.user.driverLicense" /> <label
 																for="course_easy" class="inline-label">{{'COMMON.YES'|translate}}</label>
 															</span> <span class="icheck-inline"> <input type="radio"
-																name="course_level" id="course_medium" required
+																name="course_level" id="course_medium"
 																value="no" icheck ng-model="vm.user.driverLicense" /> <label
 																for="course_medium" class="inline-label">{{'COMMON.NO'|translate}}</label>
 															</span>
