--- a/mean/public/assets/less/_uikit_custom.less
+++ b/mean/public/assets/less/_uikit_custom.less
@@ -1836,3 +1836,8 @@ group-tree-view .fancytree-container {
     max-height:200px;
     overflow-y: scroll;
 }
+.uk-text-center{
+    text-align: left! important;
+    font-size: 24px;
+    line-height: 42px;
+}
