fix conflix home html

--- a/mean/src/client/core/views/home.client.view.html
+++ b/mean/src/client/core/views/home.client.view.html
@@ -153,7 +153,7 @@
 
 	<div class="uk-block" id="sect-program" ng-show='vm.programs.length'>
 		<div class="container-home uk-container uk-container-center">
-			<h3 class="heading_b uk-text-center md-color-blue-500">{{'PAGE.HOME.AVAILABLE_PROGRAM_LIST'|translate}}</h3>
+			<h3 class="heading_b uk-text-center md-color-blue-500" id="program">{{'PAGE.HOME.AVAILABLE_PROGRAM_LIST'|translate}}</h3>
 			<div class="content-data uk-grid">
 				<div class="uk-width-1-1 course-card-home"
 					ng-repeat="program in vm.programs">
