Add avatar background

--- a/mean/public/assets/less/md/_md_utils.less
+++ b/mean/public/assets/less/md/_md_utils.less
@@ -5,6 +5,9 @@
     width: 34px;
     height: 34px;
     border-radius: 50%;
+    display: block;
+    background-color: #fff;
+    margin-top: 7px;
     &-large {
         width: 82px;
         height: 82px;
