Fix header dropdown menu

--- a/mean/src/client/workspace/views/header.client.view.html
+++ b/mean/src/client/workspace/views/header.client.view.html
@@ -71,7 +71,6 @@
                    ng-src="{{vm.user.profileImageURL?vm.user.profileImageURL:'/assets/img/avatars/user.png'}}"
                    alt="" add-image-prop />
             </a>
-            <div class="uk-dropdown  uk-dropdown-small">
 
 						<div class="uk-dropdown  uk-dropdown-small">
 							<ul class="uk-nav js-uk-prevent uk-list-line">
@@ -81,7 +80,8 @@
 								<li><a href="/api/auth/signout" target="_self">{{'PAGE.WORKSPACE.HEADER.LOGOUT'|
 										translate}}</a></li>
 							</ul>
-						</div></li>
+						</div>
+          </li>
 					<li>
 						<div class="lang_selections"
 							ng-controller="LanguageController as lang">
