--- a/mean/public/assets/less/_uikit_custom.less
+++ b/mean/public/assets/less/_uikit_custom.less
@@ -1860,3 +1860,9 @@ font-size:16px;
     border-radius: 50%;
     background-color: white;
 }
+
+#studyHtmlCourse iframe {
+    width: 100%;
+    max-height: 100%;
+    height: auto;
+}
