--- a/mean/src/client/lms/views/course-board/course-unit/html/study-html-course.client.view.html
+++ b/mean/src/client/lms/views/course-board/course-unit/html/study-html-course.client.view.html
@@ -1,6 +1,6 @@
 <div class="uk-grid">
 	<div class="uk-width-medium-1-1">
-		<div class="content-html">
+		<div class="content-html" id="studyHtmlCourse">
 			<p ng-bind-html="vm.html.content"></p>
 		</div>
 	</div>
